--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teddys Cortes</title>
 </head>
-<body>
+<body bgcolor="Moccasin">
     <h1>Teddys Cortes </h1>
     <img src="imagen.jpg" alt="" width="400" height="400">
     <h2> Datos Basicos</h2>
@@ -26,6 +26,8 @@
 
     <h2>Intereses</h2>
     <a href="intereses.html" target="_blank" rel="noopener noreferrer">ver mis instereses</a>
+    <p><a href="tabla.html" target="_blank" rel="noopener noreferrer">ver tabla en HTML</a></p>
+
 
 </body>
 </html>
