--- a/intereses.html
+++ b/intereses.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teddys Cortes</title>
 </head>
-<body>
+<body bgcolor="Moccasin">
     <h1>Mis intereses</h1> 
     
     <li> <strong>Practicar Futbol</strong></li>
